--- a/app_pengguna/templates/close_loker.html
+++ b/app_pengguna/templates/close_loker.html
@@ -1,39 +1,68 @@
-{% extends 'base_bootstrap.html' %}
+{% extends 'base.html' %}
+{% load static%}
 {% block content %}
-<div class="container">
-    <h1 class="text-center">Pengembalian Loker</h1>
-    <h2 class="text-center">Scan pada mesin untuk membuka loker</h2>
-    <div class="row justify-content-center">
-        <div class="col-md-4">
-            <div class="card">
-                <div class="card-body">
-                    <p class="card-title"><strong>Nama Loker:</strong> {{ transaksi.loker.grup_loker.nama_loker }}</p>
-                    <p class="card-text"><strong>Alamat Loker:</strong> {{ transaksi.loker.grup_loker.alamat_loker }}</p>
-                    <p class="card-text"><strong>Harga per 15 menit:</strong> Rp{{ transaksi.loker.grup_loker.harga_loker }}</p>
-                    <p class="card-text"><strong>Nomor Loker:</strong> {{ transaksi.loker.nomor_loker }}</p>
-                    {% if message %}
-                        <div class="alert alert-{{message_flag}}">
-                            {{ message }}
-                        </div>
-                        <div class="btn-toolbar mt-3 mx-3" role="toolbar" aria-label="Toolbar with button groups">
-                            <div class="btn-group me-2 mb-2" role="group" aria-label="First group">
-                                <a href="{% url 'app_pengguna:dashboard_pengguna' %}" class="btn btn-info">Kembali ke Dashboard</a>
-                            </div>
-                            <div class="btn-group me-2" role="group" aria-label="Second group">
-                                <a href="{% url 'app_pengguna:feedback' transaksi.id %}" class="btn btn-primary btn-block">Berikan Feedback</a>
-                            </div>
-                        </div>
-                    {% endif %}
-                    {% if img_base64 %}
-                        <div class="qr-img">
-                            <img src="data:image/png;base64,{{img_base64}}" alt="qr code" style="width: 100%;">
-                        </div>
-                        <a href="{% url 'app_pengguna:close_loker' transaksi.id %}" class="btn btn-info">Perbarui tampilan setelah Scan</a>
-                    {% endif %}
+<div class="grid justify-items-stretch w-screen min-h-screen">
+	<div class="row-auto justify-self-center relative min-w-[429px] max-w-[429px] min-h-screen overflow-hidden drop-shadow-md bg-[#F8F8F8] p-4">
+        <p class="text-center text-xl">My Card Locker</p>
+
+        <div class="bg-white rounded-3xl overflow-hidden mt-3">
+            <div class="h-24 overflow-hidden">
+                <img src="{% static '/images/bg-pattern.jpeg' %}"  alt="" class=" h-auto w-full">
+            </div>
+            <div class="p-3 pb-5">
+                <p class="font-bold"> {{ transaksi.loker.grup_loker.nama_loker }}</p>
+
+                <div class="grid grid-cols-2 mt-3 gap-3">
+                    <div>
+                        <p class="text-[#D9D9D9]">Start</p>
+                        <p>Fri, 15 Nov 2023</p>
+                    </div>
+                    <div>
+                        <p class="text-[#D9D9D9]">Locker Number</p>
+                        <p>{{ transaksi.loker.nomor_loker }}</p>
+                    </div>
+                    <div class="col-span-2">
+                        <p class="text-[#D9D9D9]">Cost(/15 Minutes)</p>
+                        <p>Rp{{ transaksi.loker.grup_loker.harga_loker }},00</p>
+                    </div>
+                    <div class="col-span-2">
+                        <p class="text-[#D9D9D9]">Place</p>
+                        <p>{{ transaksi.loker.grup_loker.alamat_loker }}</p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>    
-    </form>
+        {% if message %}
+            <div class="flex items-center gap-2 bg-[#CBE4D1] p-2 rounded-xl border border-[#4EC33D] my-3">
+                <div class="text-[#2E6A41]">
+                    <p class="font-bold">
+                        Success
+                    </p>
+                    <p>
+                        {{ message }}
+                    </p>
+                </div>
+            </div>
+
+            <div class="flex gap-2 justify-between w-full" role="toolbar" aria-label="Toolbar with button groups">
+                    <a href="{% url 'app_pengguna:dashboard_pengguna' %}" class="p-2 border border-8 bg-white border-black rounded-xl text-black hover:no-underline">Kembali ke Dashboard</a>
+                    <a href="{% url 'app_pengguna:feedback' transaksi.id %}" class="flex-grow  text-center bg-[#ECB748] text-black font-medium  p-2 rounded-xl hover:no-underline">Berikan Feedback</a>
+            </div>                   
+        {% endif %}
+
+        {% if img_base64 %}
+        <div class="p-4 bg-white rounded-3xl overflow-hidden text-center w-full">
+                <p>Scan Qr to Open Locker</p>
+                <img src="data:image/png;base64,{{img_base64}}" alt="qr code" style="width: 100%;">
+                <a href="{% url 'app_pengguna:close_loker' transaksi.id %}" class="relative hover:no-underline hover:text-black">
+                   <p class="relative p-2 py-3 bg-[#ECB748] drop-shadow-xl rounded-2xl z-0">Update After Scan Borcode</p>
+                   <span class="absolute -right-1 -top-1 z-100 flex h-3 w-3">
+                    <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-[#4EC33D] opacity-75"></span>
+                    <span class="relative inline-flex rounded-full h-3 w-3 bg-[#4EC33D]"></span>
+                  </span>
+                </a>
+        </div>
+        {% endif %}
+    </div>
 </div>
 {% endblock content %}
