--- a/app_pengguna/templates/kembalikan_loker.html
+++ b/app_pengguna/templates/kembalikan_loker.html
@@ -1,38 +1,85 @@
-{% extends 'base_bootstrap.html' %}
+{% extends 'base.html' %}
 {% block content %}
-<div class="container">
-    <h2 class="mt-3">Pilih Loker untuk Dikembalikan</h2>
-    <div class="row">
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Nama Grup Loker</th>
-                    <th>Harga Loker /15min</th>
-                    <th>Alamat</th>
-                    <th>No. Loker</th>
-                    <th>Status Loker</th>
-                    <th>Action</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for transaksi in transaksi_peminjaman_all %}
-                <tr>
-                    <td>{{ transaksi.loker.grup_loker.nama_loker }}</td>
-                    <td>{{ transaksi.loker.grup_loker.harga_loker }}</td>
-                    <td>{{ transaksi.loker.grup_loker.alamat_loker }}</td>
-                    <td>{{ transaksi.loker.nomor_loker }}</td>
-                    <td>{{ transaksi.loker.status_loker }}</td>
-                    <td>
-                        <a href="#" class="btn btn-info" onclick="konfirmasiPilih('{% url 'app_pengguna:close_loker' transaksi.id %}')">Pilih</a>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>    
-    </form>
-</div>
+<style>
+    .display {
+        animation: toptodown 500ms forwards ease-in-out;
+    }
 
+    @keyframes toptodown {
+    0% {
+        transform: translateY(-100px);
+        opacity: 0;
+    }
+
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+    }
+</style>
+<div class="grid justify-items-stretch w-screen min-h-screen">
+	<div class="row-auto justify-self-center relative min-w-[429px] max-w-[429px] min-h-screen overflow-hidden drop-shadow-md bg-white">
+        <div class="px-4 pt-3 pb-3 w-full bg-white">
+			<div class="flex justify-between w-full">
+				<nav class="bg-white border-gray-200">
+					<div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto">
+						 <button data-collapse-toggle="navbar-dropdown" type="button" class="inline-flex items-center w-10 h-10 justify-center text-sm text-gray-500 rounded-lg hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-dropdown" aria-expanded="false">
+							<svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+								<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+							</svg>
+						</button>
+					</div>
+				</nav>
+            </div>
+			<div class="hidden display w-full keyframes-slideDown" id="navbar-dropdown">
+				<ul class="flex flex-col font-medium p-4  mt-4 border border-gray-100 rounded-lg bg-gray-50 ">
+					<li>
+						<a  href="{% url 'app_pengguna:dashboard_pengguna'%}" class="block py-2 px-3 text-white rounded bg-[#5DCFB5] " aria-current="page">Home</a>
+					</li>
+					<li>
+						<a href="{% url 'app_pengguna:history_topup' %}" class="block py-2 px-3 rounded text-gray-400">History Top Up</a>
+					</li>
+					<li>
+						<a href="{% url 'app_pengguna:hubungi_admin' %}" class="block py-2 px-3 rounded text-gray-400">Hubungin Admin</a>
+					</li>
+					<li>
+						<a href="{% url 'logout' %}" class="block py-2 px-3 rounded text-[#870000]">Log Out</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+        <div class="p-4">
+            <p class="text-xl text-center">Kembalikan Loker</p>
+            <div class="flex flex-col gap-2 mt-3">
+                {% for transaksi in transaksi_peminjaman_all %}
+                <div class="border p-3 rounded-xl flex flex-col gap-2">
+                    <p class="text-xs p-1  text-white px-3 bg-[#4EC33D] w-fit rounded-full">Aktif</p>
+                    <hr>
+                    <div class="grid grid-cols-2 gap-2  text-xs py-2  text-[#C1C1C1]">
+                        <div >
+                            <p class="font-bold">Group Loker</p>
+                            <p  class="text-[#C1C1C1]">{{transaksi.loker.grup_loker.nama_loker }}</p>
+                        </div>
+                        <div >
+                            <p class="font-bold">Nomor Loker</p>
+                            <p >{{transaksi.loker.nomor_loker }}</p>
+                        </div>
+                        <div class="col-span-2">
+                            <p class="font-bold" >Alamat</p>
+                            <p>{{transaksi.loker.grup_loker.alamat_loker }}</p>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="w-full">
+                        <a href="#" class="text-center hover:no-underline" onclick="konfirmasiPilih('{% url 'app_pengguna:close_loker' transaksi.id %}')"><p class="bg-[#4A4949] text-white p-1 rounded-lg">Ambil</p></a>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+</div>
 <script>
     function konfirmasiPilih(url) {
         var konfirmasi = confirm("Apakah Anda yakin ingin memilih loker?");
