--- a/app_pengguna/templates/history_transaksi.html
+++ b/app_pengguna/templates/history_transaksi.html
@@ -83,7 +83,7 @@
                     <div class="flex justify-between items-center">
                         <div>
                             <p class="text-xs">Total</p>
-                            <p class="font-bold">Rp150.000</p>
+                            <p class="font-bold">Rp{{ transaksi.total_harga }}</p>
                         </div>
                         {% if not is_done_feedback %}
                         <div class="">
