--- a/app_pengguna/templates/close_loker.html
+++ b/app_pengguna/templates/close_loker.html
@@ -7,7 +7,7 @@
 
         <div class="bg-white rounded-3xl overflow-hidden mt-3">
             <div class="h-24 overflow-hidden">
-                <img src="{% static '/images/bg-pattern.jpeg' %}"  alt="" class=" h-auto w-full">
+                <img src="{% static '/images/bg-pattern.jpg' %}"  alt="" class=" h-auto w-full">
             </div>
             <div class="p-3 pb-5">
                 <p class="font-bold"> {{ transaksi.loker.grup_loker.nama_loker }}</p>
