--- a/app_pengguna/templates/dashboard_pengguna.html
+++ b/app_pengguna/templates/dashboard_pengguna.html
@@ -24,16 +24,16 @@
 			<div class="hidden w-full keyframes-slideDown" id="navbar-dropdown">
 				<ul class="flex flex-col font-medium p-4  mt-4 border border-gray-100 rounded-lg bg-gray-50 ">
 					<li>
-						<a href="#" class="block py-2 px-3 text-white rounded bg-[#5DCFB5] " aria-current="page">Home</a>
+						<a href="#" class="block py-2 px-3 text-white rounded bg-[#5DCFB5] hover:no-underline" aria-current="page">Home</a>
 					</li>
 					<li>
-						<a href="{% url 'app_pengguna:history_topup' %}" class="block py-2 px-3 rounded text-gray-400">History Top Up</a>
+						<a href="{% url 'app_pengguna:history_topup' %}" class="block py-2 px-3 rounded text-gray-400 hover:no-underline hover:text-black">History Top Up</a>
 					</li>
 					<li>
-						<a href="{% url 'app_pengguna:hubungi_admin' %}" class="block py-2 px-3 rounded text-gray-400">Hubungin Admin</a>
+						<a href="{% url 'app_pengguna:hubungi_admin' %}" class="block py-2 px-3 rounded text-gray-400 hover:no-underline hover:text-black">Hubungin Admin</a>
 					</li>
 					<li>
-						<a href="{% url 'logout' %}" class="block py-2 px-3 rounded text-[#870000]">Log Out</a>
+						<a href="{% url 'logout' %}" class="block py-2 px-3 rounded text-[#870000] hover:no-underline hover:text-black">Log Out</a>
 					</li>
 				</ul>
 			</div>
@@ -112,8 +112,8 @@
 							<p>{{pinjaman.loker.grup_loker.nama_loker}}</p>
 							<p>{{pinjaman.mulaipinjam}}</p>
 						</div>
-						<a href="{% url 'app_pengguna:kembalikan_loker'%}" class="">
-							<p class="text-sm bg-[#5DCFB5] p-2 px-4 rounded-full" >Ambil</p>
+						<a href="{% url 'app_pengguna:kembalikan_loker'%}" class="hover:no-underline hover:text-black">
+							<p class="text-sm bg-[#5DCFB5] hover:outline hover:outline-2 hover:outline-[#5DCFB5] hover:bg-white p-2 px-4 rounded-full" >Ambil</p>
 						</a>
 					</div>
 					{%endfor%}
