--- a/app_pengguna/templates/feedback.html
+++ b/app_pengguna/templates/feedback.html
@@ -1,4 +1,4 @@
-{% extends 'base_bootstrap.html' %}
+{% extends 'base.html' %}
 {% load static %}
 
 {% block meta %}
@@ -6,7 +6,62 @@
 {% endblock meta %}
 
 {% block content %}
-<div class="content-container d-flex align-items-center justify-content-center mx-auto">
+<div class="grid justify-items-stretch w-screen min-h-screen">
+	<div class="row-auto justify-self-center relative min-w-[429px] max-w-[429px] min-h-screen overflow-hidden drop-shadow-md bg-white p-4">
+        <div class="flex gap-2">
+            <a href="{% url 'app_pengguna:dashboard_pengguna' %}">
+                <img src="{% static '/images/back-icon.png' %}"  alt="" class=" h-6 w-auto">
+            </a>
+            <p>Feedback</p>
+        </div>
+       
+       <div class="mt-5">
+            <p class="font-bold">Give Feedback</p>
+            <p class="mt-2">What do you think about our service?</p>
+       </div>
+       {% if status == 'success' %}
+            <div class="alert alert-success">
+                {{ message }}
+            </div>
+            <a href="{% url 'app_pengguna:dashboard_pengguna' %}" class="btn btn-primary mb-3">Back to Dashboard</a>
+        {% else %} 
+        <form method="post" enctype="multipart/form-data" class="mt-6">
+            {% csrf_token %}
+            <div style="display: flex;" id="flex-container">
+                <div style="flex: 1; padding: 0 10px;">
+                    <div class="form-group">
+                        <div class="flex justify-between">
+                            {% for i in "12345" %}
+                                <div class="flex flex-col items-center gap-2">
+                                    {% if i == '1' %}
+                                        <img src="{% static '/images/rate-1.png' %}"  alt="" class=" h-5 w-5">
+                                    {% elif i == '2'%}
+                                        <img src="{% static '/images/rate-2.png' %}"  alt="" class=" h-5 w-5">
+                                    {% elif i == '3'%}
+                                        <img src="{% static '/images/rate-3.png' %}"  alt="" class=" h-5 w-5">
+                                    {% elif i == '4'%}
+                                        <img src="{% static '/images/rate-4.png' %}"  alt="" class=" h-5 w-5">
+                                    {% else %}
+                                        <img src="{% static '/images/rate-5.png' %}"  alt="" class=" h-5 w-5">
+                                    {%endif%}
+                                    <input type="radio" id="rating{{ i }}" name="rating" value="{{ i }}" required>
+                                </div>
+                            {% endfor %}
+                        </div>
+                    </div>
+                    <div class="form-group mt-14">
+                        <label for="message_feedback">Do you have any thoughts you’d like to share?</label>
+                        <input type="text" class="form-control border border-[#F5F5F5] " id="message_feedback" name="message_feedback" required>
+                    </div>
+                </div>
+            </div>
+            <button type="submit" class="bg-[#D9D9D9] p-3 rounded-xl w-full mt-4">Submit</button>
+        </form>    
+        {% endif %}
+    </div>
+</div>
+
+<!-- <div class="content-container d-flex align-items-center justify-content-center mx-auto">
     <div class="container">
         <h2>Kirim Feedback</h2>
         
@@ -40,5 +95,5 @@
             </form>        
         {% endif %}
     </div>
-</div>
+</div> -->
 {% endblock content %}
